--- a/src/app/navigation/main-page/main-page.component.html
+++ b/src/app/navigation/main-page/main-page.component.html
@@ -9,6 +9,7 @@
       <mat-tab label="Matches"></mat-tab>
       <mat-tab label="Players"></mat-tab>
       <mat-tab label="Statistics"></mat-tab>
+      <mat-tab label="Referees"></mat-tab>
     </mat-tab-group>
 
     <router-outlet></router-outlet>
